Fixed chip overflow hiding delete button

--- a/viewer/static/less/shared/edit.less
+++ b/viewer/static/less/shared/edit.less
@@ -182,13 +182,16 @@
       border-radius: 1em;
       padding: 3px 8px 3px 12px;
       margin: 0px;
-      max-width: 300px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      float: left;
       > a {
+        display: inline-block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 285px;
         color: inherit;
         text-decoration: none;
+        float: left;
       }
       .delete {
         margin-left: 0.2em;
@@ -219,7 +222,7 @@
       width: 0px;
       height: 0px;
       padding: 0px;
-      margin: 3px 0px 0px 0px;
+      margin: 30px 0px 0px 0px;
       .header {
         border: solid #bdbdbd;
         border-width: 0px 0px 1px 0px;
